@startuml simplified_concepts

skinparam classAttributeIconSize 0
hide circle

!include https://raw.githubusercontent.com/patrik-csak/one-dark-plantuml-theme/v1.0.1/theme.puml

interface Driveable {
    + {static} MAX_SPEED : double = 200.0
    + start() : void
    + getSpeed() : double
}

note right of Driveable
  **Interface Constant**
  MAX_SPEED is a public
  static final constant
end note

abstract class AbstractVehicle {
    # manufacturer : String
    # year : int
    + AbstractVehicle(manufacturer:String, year:int)
    + getManufacturer() : String
    + getYear() : int
    + {abstract} calculateCost() : double
    + getInfo() : String
}

note right of AbstractVehicle
  **Abstract Super Class**
  Contains abstract method
  calculateCost() that must
  be implemented by subclasses
end note

class Car {
    - price : double
    - speed : double
    + Car(manufacturer:String, year:int, price:double)
    + Car(manufacturer:String, year:int)
    + getPrice() : double
    + calculateCost() : double
    + calculateCost(years:int) : double
    + getInfo() : String
    + start() : void
    + getSpeed() : double
}

note bottom of Car
  **Demonstrates:**
  • Constructor Overloading (2 constructors)
  • Method Overloading (calculateCost)
  • Method Overriding (calculateCost, getInfo, start, getSpeed)
  • Interface Implementation (Driveable)
  • Inheritance (AbstractVehicle)
end note

Car --|> AbstractVehicle : extends
Car ..|> Driveable : implements

note "Method Overriding:\n• calculateCost() - abstract\n• getInfo() - concrete" as N1
AbstractVehicle .. N1
Car .. N1

note "Method Overloading:\n• calculateCost()\n• calculateCost(int)" as N2
Car .. N2

note "Constructor Overloading:\n• Car(String,int,double)\n• Car(String,int)" as N3
Car .. N3

@enduml

